--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -5,17 +5,20 @@
     --text-color: #999999;
     --blue: #4169e1;
 }
-
+.productContainer{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .main{
     width: 80%;
     height: 80%;
     background-color: var(--primary);
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.14);
     display: flex;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50% ,-50%);
+
 }
 .main .img{
     display: flex;
@@ -98,12 +101,10 @@
     cursor: pointer;
 }
 @media (min-width: 200px) and (max-width: 1100px) {
-    .container{
+
+    .main{
         width: 100%;
         height: 100%;
-    }
-    .main{
-
         flex-direction: column;
     }
     .main .img{
