--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -112,9 +112,11 @@
         position: relative;
         height: 500px;
     }
-
+.main .img img{
+width: 250px;
+}
     .main .about{
         width: 100%;
-        height: 600px;
+        height: 650px;
     }
 }
