--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -104,7 +104,7 @@
 
     .main{
         width: 100%;
-        height: 100%;
+        height: 100vh;
         flex-direction: column;
     }
     .main .img{
