--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -104,15 +104,13 @@
 
     .main{
         width: 100%;
-        height: 100vh;
+        height: fit-content;
         flex-direction: column;
     }
     .main .img{
         width: 100%;
         height: 700px;
     }
-
-
     .main .about{
         width: 100%;
         height: 750px;
