--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -124,15 +124,14 @@
         height: 100%;
         flex-direction: column;
     }
-
+    .main .img{
+        width: 100%;
+        height: 400px;
+    }
     .main .about {
         width: 100%;
         position: relative;
-        height: 500px;
+        height: 4000px;
     }
 
-    .main .about{
-        width: 100%;
-        height: 60px;
-    }
 }
