--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -5,15 +5,13 @@
     --text-color: #999999;
     --blue: #4169e1;
 }
-
-.productContainer {
-    width: 100%;
+.product{
     height: 100vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .main {
     width: 80%;
     height: 80%;
@@ -115,10 +113,13 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    bottom: 7%;
 }
 
 @media (min-width: 200px) and (max-width: 1100px) {
-
+    .product{
+        display: unset;
+    }
     .main {
         width: 100%;
         height: 100%;
@@ -130,8 +131,10 @@
     }
     .main .about {
         width: 100%;
-        height: 500px;
+        height: 550px;
         
     }
-
+    .main .about button{
+        bottom: 7%;
+    }
 }
