--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root{
-    --primary: #F3F7FA;
-    --white: #fff;
+    --primary: #E8EEEE;
+    --white: #F2F3F5;
 }
 *{
     margin: 0;
@@ -11,7 +11,7 @@
 body{
     height: 100vh;
     width: 100%;
-    background-color: var(--primary);
+    background-color: var(--white);
 
 }
 .container{
@@ -30,7 +30,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
     position: relative;
 }
 
@@ -99,12 +98,11 @@ body{
 .header{
     width: 100%;
     height: 500px;
-    background-color: var(--white);
+    background-color: var(--primary);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 4%;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.10);
 }
 .header .text{
     color: #333;
@@ -165,9 +163,8 @@ body{
 .products .cards-parent .card{
     width: 300px;
     height: 360px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
     margin: 2% 0;
-    background-color: var(--primary);
+    background-color: var(--white);
     position: relative;
 }
 
@@ -177,7 +174,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--white);
+    background-color: var(--primary);
 }
 .products .cards-parent .card .img img{
     width: 50%;
