--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 :root{
-    --primary: #E8EEEE;
+    --primary: #E9EFEF;
+    --second-primary: #D2E9E3;
     --white: #F2F3F5;
 }
 *{
@@ -98,7 +99,7 @@ body{
 .header{
     width: 100%;
     height: 500px;
-    background-color: var(--primary);
+    background-color: var(--second-primary);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -184,17 +185,17 @@ body{
 }
 .products .cards-parent .card h4{
     font-size: 20px;
-    margin: 3% 5%;
+    margin: 3% 0;
     font-family: 'Changa', sans-serif;
 }
 .products .cards-parent .card h5{
     font-size: 15px;
-    margin: 3% 5%;
+    margin: 3% 0;
     font-family: 'Changa', sans-serif;
 }
 .products .cards-parent .card h6{
     font-size: 15px;
-    margin: 3% 5%;
+    margin: 3% 0;
     font-family: 'Changa', sans-serif;
 }
 
@@ -202,7 +203,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 3% 5%;
+    margin: 3% 0;
     height: 30px;
 }
 .products .cards-parent .card a{
