--- a/src/pages/product.css
+++ b/src/pages/product.css
@@ -6,7 +6,10 @@
     --blue: #4169e1;
     --second-primary: #D2E9E3;
 }
-
+.test{
+    width: 100%;
+    height: 100%;
+}
 .main {
     width: 80%;
     height: 80%;
