--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -443,12 +443,12 @@ body {
         bottom: 0%;
         display: none;
     }
-    .foot{
+    .header .foot{
         flex-direction: column;
         height: 500px;
     }
 
-    .foot section{
+    .header .foot section{
         width: 100%;
         height: 49%;
 
@@ -474,49 +474,49 @@ body {
     }
 
     @media (min-width: 200px) and (max-width: 550px) {
-        .head .text {
+        .header .head .text {
             display: flex;
             align-items: center;
             flex-direction: column;
         }
 
-        .head .text h1 {
+        .header .head .text h1 {
             text-align: center;
         }
 
-        .head .text p {
+        .header .head .text p {
             text-align: center;
             width: 100%;
         }
 
-        .head .text input {
+        .header .head .text input {
             margin: 3% 0;
             display: inline-flex;
         }
-        .foot{
+        .header .foot{
             height: 700px;
         }
-        .foot section{
+        .header .foot section{
             flex-direction: column;
             position: relative;
         }
-        .foot section:first-child .text{
+        .header .foot section:first-child .text{
             position: absolute;
             top: 0%;
             left: 0%;
         }
-        .foot section:first-child img{
+        .header .foot section:first-child img{
             position: absolute;
             right: 0%;
             bottom: 0%;
             width: 230px;
         }
-        .foot section:last-child .text{
+        .header .foot section:last-child .text{
             position: absolute;
             right: 0%;
             top: 0%;
         }
-        .foot section:last-child img{
+        .header .foot section:last-child img{
             position: absolute;
             bottom: 0%;
             left: 0%;
@@ -538,10 +538,10 @@ body {
             font-size: 14px;
             letter-spacing: 0;
         }
-        .foot section .text{
+        .header .foot section .text{
             width: 100%;
         }
-        .foot section .text .main-title{
+        .header .foot section .text .main-title{
             font-size: 20px;
         }
 
