--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,229 +1,266 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+.nav {
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+  height: 50px;
+  background-color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  justify-content: space-between;
+  font-family: sans-serif;
+  padding: 0 5%;
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.nav h2{
+    font-weight: bold;
+    font-size: 22px;
 }
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.nav ul li{
+    margin: 0 20px;
+    display: inline-block;
+    list-style: none;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+.nav ul li .mainLink{
+    text-decoration: none;
+    color: #333;
 }
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.nav .btn{
+    padding: 6px 21px;
+    background-color: slateblue;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 3px;
+    cursor: pointer;
+    text-decoration: none;
 }
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+.header {
     width: 100%;
-  }
+    height: fit-content;
+    padding: 1% 5%;
+}
 
-  .description p {
+.head {
+    width: 100%;
+    height: 450px;
+    background-color: var(--second-primary);
+    display: flex;
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
+    justify-content: space-between;
+    padding: 0 4%;
+}
+
+.head .text {
+    color: #333;
+    width: 50%;
+}
+
+.head .text h1 {
+    font-size: 40px;
+    margin: 10px 0;
+    color: inherit;
+    font-family: var(--primary-font);
+    font-weight: 500;
+}
+
+.head .text p {
+    font-size: 15px;
+    font-weight: 500;
+    width: 90%;
+    letter-spacing: 0.2px;
+    line-height: 21px;
+    margin: 10px 0;
+    color: inherit;
+}
+
+.head .text input {
+    margin: 10px 10px 10px 0px;
     border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+    background-color: #333;
+    color: var(--white);
+    padding: 7px 21px;
+    font-weight: bold;
+}
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
+.head .text a {
+    color: #333;
+    font-size: 15px;
+}
+
+.foot {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2%;
+}
+
+.foot section {
+    width: 49%;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+    background-color: var(--primary);
+    display: flex;
+    align-items: center;
+    overflow: hidden;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.foot section img {
+    width: 200px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.foot section .text {
+    width: 70%;
+    transform: translateX(5%);
+    text-align: start;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.foot section .text .mainTitle {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    margin: 10px 0;
+    text-align: inherit;
+}
+
+.foot section .text h2 span {
+    font-weight: bold;
+}
+
+.foot section p {
+    letter-spacing: 0.2px;
+    font-size: 15px;
+    line-height: 23px;
+    margin-bottom: 10px;
+}
+
+.foot section a {
+    color: var(--black);
+    margin-top: 10px;
+}
+
+.foot section:last-child .text {
+    text-align: end;
+    transform: translateX(-5%);
+}
+
+.foot section:last-child img {
+    transform: translateY(20%);
+}
+
+
+
+@media (min-width: 200px) and (max-width: 1000px) {
+    
+    .head {
+        height: 600px;
+        align-items: none;
+        position: relative;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .head .text {
+        width: 100%;
+    }
+
+    .head .text h1 {
+        font-size: 35px;
+        margin: 20px 0;
+    }
+
+    .head .text p {
+        font-size: 17px;
+        width: 60%;
+    }
+
+    .head img {
+        position: absolute;
+        width: 400px;
+        right: 4%;
+        bottom: 0%;
+        display: none;
+    }
+    .header .foot{
+        flex-direction: column;
+        height: 500px;
+    }
+
+    .header .foot section{
+        width: 100%;
+        height: 49%;
+
+    }
+
+    @media (min-width: 200px) and (max-width: 550px) {
+        .header .head .text {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .header .head .text h1 {
+            text-align: center;
+        }
+
+        .header .head .text p {
+            text-align: center;
+            width: 100%;
+        }
+
+        .header .head .text input {
+            margin: 3% 0;
+            display: inline-flex;
+        }
+        .header .foot{
+            height: 700px;
+        }
+        .header .foot section{
+            flex-direction: column;
+            position: relative;
+        }
+        .header .foot section:first-child .text{
+            position: absolute;
+            top: 0%;
+            left: 0%;
+        }
+        .header .foot section:first-child img{
+            position: absolute;
+            right: 0%;
+            bottom: 0%;
+            width: 230px;
+        }
+        .header .foot section:last-child .text{
+            position: absolute;
+            right: 0%;
+            top: 0%;
+        }
+        .header .foot section:last-child img{
+            position: absolute;
+            bottom: 0%;
+            left: 0%;
+        }
+
+    }
+
+    @media (min-width: 200px) and (max-width: 380px) {
+        .head {
+            height: 500px;
+        }
+
+        .head .text h1 {
+            font-size: 28px;
+
+        }
+
+        .head .text p {
+            font-size: 14px;
+            letter-spacing: 0;
+        }
+        .header .foot section .text{
+            width: 100%;
+        }
+        .header .foot section .text .main-title{
+            font-size: 20px;
+        }
+
+    }
+
+    .footer {
+        font-size: 13px;
+    }
 }
